welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: type blue is not a member of object java.awt.Color
setCouleurCorps(c:Color.blue)
                        ^Source:2: error: not found: value c
setCouleurCorps(c:Color.blue)
                ^